--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header{
 
 nav {
   text-align: center;
-  background-color: #84252C;
+  background-color: #9E2A2B;
   border: 3px solid black;
   padding: 0;
   margin: 0;
